# django_teach

./: .env.example  .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
catalog/: admin.py  apps.py  models.py  urls.py  views.py
catalog/fixtures/: categories.json  products.json
catalog/management/commands/: fill_test_data.py
catalog/migrations/: 0001_initial.py
catalog/templates/catalog/: contacts.html  home.html
config/: settings.py  urls.py
shop/: db.sqlite3  settings.py
shop/shop/: settings.py  urls.py
