[project]
name = "django_teach"
version = "0.1.0"
description = "Учебный проект интернет-магазина на Django"
authors = [
    {name = "Михаил Красноперов", email = "your-email@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django>=4.2,<5.0",
    "asgiref>=3.7.2",
    "sqlparse>=0.4.4",
    "tzdata>=2023.3"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "django_teach"
version = "0.1.0"
description = "Учебный проект интернет-магазина на Django"
authors = ["Михаил Красноперов <your-email@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
asgiref = "^3.7"
sqlparse = "^0.4"
tzdata = "^2023.3"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
black = "^23.0"