[project]
name = "django_teach"
version = "0.1.0"
description = "Учебный проект интернет-магазина на Django"
authors = [
    {name = "Your Name", email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django>=4.2,<5.0",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.0"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "django_teach"
version = "0.1.0"
description = "Учебный проект интернет-магазина на Django"
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
black = "^23.0"

